src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_target_missing.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 280
expression: output
---
error: design overlay targets parameter `lenght`, which is not defined on the target model (did you mean `length`?)
  at fixtures/overlay_target_missing/typo.one:9:1
---

Model: fixtures/overlay_target_missing/parent.on
Tests: 0/0
