src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_wrong_target_for_ref.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: output
---
error: `use design … for planet`: design `wrong_target_design.one` targets `gravity_mars.on`, but reference `planet` resolves to `gravity_earth.on`. Apply this design without `for`, or use a design whose `design <model>` matches `gravity_earth.on`.
  at fixtures/design_overlay/wrong_target/parent.on:7:1
---

Model: fixtures/design_overlay/wrong_target/parent.on
Tests: 0/0
Parameters:
  m = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(100.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "kg", exponent: 1.0 } } })
  w = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(981.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0, Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "N", exponent: 1.0 } } })
