src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__parameter_cycle_file_static.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"parameter_cycle/cycle.on\")"
---
error: circular dependency detected in parameters - a -> b -> a
  at fixtures/parameter_cycle/cycle.on:4:8

error: circular dependency detected in parameters - b -> a -> b
  at fixtures/parameter_cycle/cycle.on:5:9
