src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__replace_mid_direct_baseline.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 109
expression: output
---
Model: fixtures/reference_replacement/with_submodels/test_mid_direct.on
Tests: 0/0
Parameters:
  result = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(1.019367991845056)), unit: Unit { dimension_map: DimensionMap({}), magnitude: 1.0, is_db: false, display_unit: Divide(Unit { name: "N", exponent: 1.0 }, Multiply(Unit { name: "kg", exponent: 1.0 }, Divide(Unit { name: "m", exponent: 1.0 }, Unit { name: "s", exponent: 2.0 }))) } })
