src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__submodel_neither_on_nor_one_found.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 95
expression: "run_fixture(\"design_overlay/missing_model/parent.on\")"
---
error: no model or design file found (looked for `fixtures/design_overlay/missing_model/nonexistent.on` and `fixtures/design_overlay/missing_model/nonexistent.one`)
  at fixtures/design_overlay/missing_model/parent.on:3:25
---

Model: fixtures/design_overlay/missing_model/parent.on
Tests: 0/0
Parameters:
  m = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(5.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "kg", exponent: 1.0 } } })
